infra/cdk.out/FruitHarvestNetworkStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcappSubnet1SubnetAE489B2F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet1/Subnet"
   }
  },
  "VpcappSubnet1RouteTable072E8E09": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet1/RouteTable"
   }
  },
  "VpcappSubnet1RouteTableAssociation168BF781": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet1SubnetAE489B2F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet1/RouteTableAssociation"
   }
  },
  "VpcappSubnet1DefaultRoute64294A8F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet1/DefaultRoute"
   }
  },
  "VpcappSubnet2Subnet2449FB56": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet2/Subnet"
   }
  },
  "VpcappSubnet2RouteTableB76BFC59": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet2/RouteTable"
   }
  },
  "VpcappSubnet2RouteTableAssociation81E96A75": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet2Subnet2449FB56"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet2/RouteTableAssociation"
   }
  },
  "VpcappSubnet2DefaultRouteEBCCC1EA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/appSubnet2/DefaultRoute"
   }
  },
  "VpcdbSubnet1Subnet1B82B149": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/dbSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet1/Subnet"
   }
  },
  "VpcdbSubnet1RouteTable04184FDD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/dbSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet1/RouteTable"
   }
  },
  "VpcdbSubnet1RouteTableAssociation3FF66701": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcdbSubnet1RouteTable04184FDD"
    },
    "SubnetId": {
     "Ref": "VpcdbSubnet1Subnet1B82B149"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet1/RouteTableAssociation"
   }
  },
  "VpcdbSubnet2Subnet01192A3B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/dbSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet2/Subnet"
   }
  },
  "VpcdbSubnet2RouteTable7BBEF14D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc/dbSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet2/RouteTable"
   }
  },
  "VpcdbSubnet2RouteTableAssociation3D000840": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcdbSubnet2RouteTable7BBEF14D"
    },
    "SubnetId": {
     "Ref": "VpcdbSubnet2Subnet01192A3B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/dbSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FruitHarvestNetworkStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/Vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOQQuCQBSEf4v3dSslOotEeKlFw2s8txdu6q64bxMR/3uYoaeZ+RiGCXhwPPG9B7315bPya1XwMSOQFYPePlAGfMxbyeKXzkXMhCtqJTNXaKSZbS41jvAORY0b31hkrZEKSBm9lmdzTsQsV6ALEPYwMNGpDxBuw4km7DSuheXJP0VEIMsGNU0sRWtcJ3+7N0eto4mJgUqjdyE/hDz03lYpv3OaVIM8XfQLgmcrTwEBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "Vpc8378EB38"
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcdbSubnet1Subnet1B82B149149FF20C": {
   "Value": {
    "Ref": "VpcdbSubnet1Subnet1B82B149"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpcdbSubnet1Subnet1B82B149149FF20C"
   }
  },
  "ExportsOutputRefVpcdbSubnet2Subnet01192A3B663EE20F": {
   "Value": {
    "Ref": "VpcdbSubnet2Subnet01192A3B"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpcdbSubnet2Subnet01192A3B663EE20F"
   }
  },
  "ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8": {
   "Value": {
    "Ref": "VpcappSubnet1SubnetAE489B2F"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8"
   }
  },
  "ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC": {
   "Value": {
    "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC"
   }
  },
  "ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627": {
   "Value": {
    "Ref": "VpcpublicSubnet2SubnetE34B022A"
   },
   "Export": {
    "Name": "FruitHarvestNetworkStack:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
