infra/cdk.out/FruitHarvestSecurityStack.template.json
{
 "Resources": {
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow internet HTTP to ALB",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP from internet",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "FruitHarvestNetworkStack:ExportsOutputRefVpc8378EB38272D6E3A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/AlbSecurityGroup/Resource"
   }
  },
  "BackendEc2SecurityGroup06445A06": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow ALB to Node.js backend",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "FruitHarvestNetworkStack:ExportsOutputRefVpc8378EB38272D6E3A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/BackendEc2SecurityGroup/Resource"
   }
  },
  "BackendEc2SecurityGroupfromFruitHarvestSecurityStackAlbSecurityGroup33E474C93000E82ABD2D": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Node.js from ALB",
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "BackendEc2SecurityGroup06445A06",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 3000
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/BackendEc2SecurityGroup/from FruitHarvestSecurityStackAlbSecurityGroup33E474C9:3000"
   }
  },
  "DatabaseSecurityGroup7319C0F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow MySQL from backend",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "FruitHarvestNetworkStack:ExportsOutputRefVpc8378EB38272D6E3A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/DatabaseSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroupfromFruitHarvestSecurityStackBackendEc2SecurityGroupCC509E7D33063F151870": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "MySQL from backend EC2",
    "FromPort": 3306,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup7319C0F6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "BackendEc2SecurityGroup06445A06",
      "GroupId"
     ]
    },
    "ToPort": 3306
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/DatabaseSecurityGroup/from FruitHarvestSecurityStackBackendEc2SecurityGroupCC509E7D:3306"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/zPSMzI11zNQTCwv1k1OydbNyUzSqw4uSUzO1kksL45PTTbSqw5OTS4tyiypdC/KLy3QcU7Lwy/gmZdelFpcXFurE1BZkpGfp2+sZ2isZ6yYVZyZqVtUmleSmZuqFwShAcDS6zJ/AAAA"
   },
   "Metadata": {
    "aws:cdk:path": "FruitHarvestSecurityStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827": {
   "Value": {
    "Fn::GetAtt": [
     "DatabaseSecurityGroup7319C0F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "FruitHarvestSecurityStack:ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827"
   }
  },
  "ExportsOutputFnGetAttBackendEc2SecurityGroup06445A06GroupId8A5701A5": {
   "Value": {
    "Fn::GetAtt": [
     "BackendEc2SecurityGroup06445A06",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "FruitHarvestSecurityStack:ExportsOutputFnGetAttBackendEc2SecurityGroup06445A06GroupId8A5701A5"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup86A59E99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "FruitHarvestSecurityStack:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
